# InferMesh

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py  orchestrator.py
app/api/: middleware.py  routes.py
app/autoscaler/: horizontal.py  predictive.py
app/batching/: dynamic_batcher.py
app/health/: monitor.py
app/kvcache/: kvcache_manager.py
app/metrics/: collectors.py  registry.py
app/queue/: admission.py  priority_queue.py
app/resource/: gpu_manager.py  memory_manager.py
app/scheduler/: base.py  gang_scheduler.py  priority_scheduler.py  topology_scheduler.py
benchmarks/: run_benchmarks.py
benchmarks/analysis/: statistical.py
benchmarks/metrics/: collector.py
benchmarks/runners/: base_runner.py  cache_runner.py  fault_runner.py  latency_runner.py  scaling_runner.py  sla_runner.py  throughput_runner.py
configs/: default.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: infermesh.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/rules/: alerts.yml
results/20260708_122950/: combined_report.md  summary_table.txt
results/20260708_124809/: combined_report.md  summary_table.txt
tests/: conftest.py
tests/integration/: test_orchestrator.py
tests/unit/: test_kvcache.py  test_queue.py  test_scheduler.py
