[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infermesh"
version = "1.0.0"
description = "Distributed LLM Inference Orchestrator — production-grade Kubernetes-inspired scheduler for heterogeneous GPU clusters"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "InferMesh Contributors" }]
keywords = ["llm", "inference", "distributed", "gpu", "scheduling", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.1",
    # Async
    "anyio>=4.4.0",
    "aiofiles>=23.2.1",
    # Metrics
    "prometheus-client>=0.20.0",
    # Logging
    "structlog>=24.2.0",
    "rich>=13.7.1",
    # Data
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # Stats & analysis
    "scipy>=1.13.0",
    # gRPC
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0",
    "protobuf>=5.27.0",
    # Redis (queue persistence)
    "redis>=5.0.4",
    # Scheduling utilities
    "sortedcontainers>=2.4.0",
    # Retry / backoff
    "tenacity>=8.3.0",
    # CLI
    "typer>=0.12.3",
    "click>=8.1.7",
    "tabulate>=0.9.0",
    # Matplotlib for benchmark plots
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
    "ruff>=0.4.8",
    "pre-commit>=3.7.1",
    "factory-boy>=3.3.0",
    "hypothesis>=6.104.0",
]

[project.scripts]
infermesh = "infermesh.app.main:cli_entry"
infermesh-bench = "infermesh.benchmarks.run_benchmarks:app"

[tool.hatch.build.targets.wheel]
packages = ["app", "benchmarks"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "N806"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "benchmarks/*", "*_pb2*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
